--- a/po/cs.po
+++ b/po/cs.po
@@ -1,22 +1,21 @@
 # Czech translation for gnome-video-arcade.
 # Copyright (C) 2009 the author(s) of gnome-video-arcade.
 # This file is distributed under the same license as the gnome-video-arcade package.
-# Marek Černocký <marek@manet.cz>, 2009, 2010.
+# Marek Černocký <marek@manet.cz>, 2009, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-video-arcade master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-17 00:13+0200\n"
-"PO-Revision-Date: 2010-05-16 23:39+0200\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=\n"
+"POT-Creation-Date: 2011-02-26 18:24+0000\n"
+"PO-Revision-Date: 2011-02-27 23:55+0100\n"
 "Last-Translator: Marek Černocký <marek@manet.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: cs\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Poedit-Language: Czech\n"
-"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../data/gnome-video-arcade.builder.h:1
 msgid " "
@@ -91,7 +90,7 @@ msgstr "<b>Zvuk</b>"
 
 #. The same text is in gnome-video-arcade.builder,
 #. * so it has to be translated with markup anyway.
-#: ../data/gnome-video-arcade.builder.h:21 ../src/gva-columns.c:747
+#: ../data/gnome-video-arcade.builder.h:21 ../src/gva-columns.c:750
 msgid "<b>There are known problems with this game:</b>"
 msgstr "<b>Existují známé problémy s touto hrou:</b>"
 
@@ -235,14 +234,262 @@ msgstr "Technické"
 msgid "_Start Game"
 msgstr "_Spustit hru"
 
-#: ../src/gconf-bridge.c:1222
-#, c-format
-msgid "GConf error: %s"
-msgstr "Chyba GConf: %s"
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:1
+#| msgid "Show all available games"
+msgid "All available column names"
+msgstr "Všechny dostupné názvy sloupců"
 
-#: ../src/gconf-bridge.c:1232
-msgid "All further errors shown only on terminal."
-msgstr "Všechny další chyby se zobrazují pouze v terminálu."
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:2
+#| msgid "Play a music clip"
+msgid "Auto-play music clip"
+msgstr "Automaticky přehrát hudební klip"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:3
+#| msgid "Columns"
+msgid "Column names"
+msgstr "Názvy sloupců"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:4
+msgid ""
+"Enable automatic playing of in-game music clips. If true, and a music clip "
+"is available for the selected game, the clip will automatically begin "
+"playing when the user opens the Properties window or when the user selects a "
+"different game while the Properties window is visible. Music clips are "
+"streamed from http://www.arcade-history.com/."
+msgstr ""
+"Zapne automatické přehrávání hudebního klipu ve hře. Pokud je zapnuto, a "
+"hudební klip je pro vybranou hru dostupný, bude tento automaticky přehrán, "
+"když uživatel otevře okno Vlastnosti nebo když uživatel vybere jinou hru ve "
+"chvíli, kdy je okno vlastnosti zobrazené. Hudební klipy jsou přehrávány "
+"proudově z http://www.arcade-history.com/."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:5
+msgid ""
+"Enable automatic restore at startup and save at exit. If true, the emulator "
+"will try to restore the previous state of the arcade machine when starting a "
+"game. If false, the emulator will boot the arcade machine from a cold start. "
+"This setting does not apply to recording games or playing back previously "
+"recorded games. In those cases the emulator will always reboot the arcade "
+"machine."
+msgstr ""
+"Zapne automatickou obnovu při spuštění a uložení při ukončení. Pokud je "
+"zapnuto, emulátor se pokusí při spuštění hry obnovit předchozí stav stroje "
+"arcade. Pokud je vypnuto, emulátor zavede stroj arcade od studeného startu. "
+"Toto nastavení se nepoužívá k záznamu her nebo přehrání dříve uložených her. "
+"V takových případech emulátor stroj arcade vždy restartuje."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:6
+#| msgid "_Favorite Games"
+msgid "Favorite games"
+msgstr "Oblíbené hry"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:7
+msgid ""
+"If true, automatically switch to full screen mode when starting a game. If "
+"false, start the game in a window."
+msgstr ""
+"Pokud je zapnuto, přepne se při spuštění hry automaticky do režimu celé "
+"obrazovky. Pokud je vypnuto, spustí se hra v okně."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:8
+msgid "If true, games are started without sound."
+msgstr "Pokud je zapnuto, budou hry spouštěny bez zvuku."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:9
+msgid ""
+"If true, show both original and cloned games in the main window. If false, "
+"show only original games."
+msgstr ""
+"Pokud je zapnuto, zobrazí se v hlavním okně jak originální, tak klonované "
+"hry. Pokud je vypnuto, zobrazí se jen originální hry."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:10
+msgid ""
+"List of all available column names. The user may choose to only display a "
+"subset of them (see \"columns\")."
+msgstr ""
+"Seznam všech dostupných názvů sloupců. Uživatel si může nechat zobrazit jen "
+"část z nich (viz „columns“)."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:11
+msgid "List of column names to display."
+msgstr "Seznam názvů sloupců, které se mají zobrazit."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:12
+msgid "List of the user's favorite games."
+msgstr "Seznam oblíbených her uživatele."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:13
+msgid "Program version"
+msgstr "Verze programu"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:14
+#| msgid "Properties"
+msgid "Properties height"
+msgstr "Výška Vlastností"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:15
+#| msgid "Properties"
+msgid "Properties maximized"
+msgstr "Maximalizace Vlastností"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:16
+#| msgid "Properties"
+msgid "Properties page"
+msgstr "Stránka Vlastností"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:17
+#| msgid "Properties"
+msgid "Properties width"
+msgstr "Šířka Vlastností"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:18
+#| msgid "Save ROM errors to a file"
+msgid "ROM error filename"
+msgstr "Název souboru s chybami ROM"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:19
+msgid "Save and restore state"
+msgstr "Ukládat a obnovovat stav"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:20
+#| msgid "Search Result"
+#| msgid_plural "Search Results"
+msgid "Search text"
+msgstr "Hledaný text"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:21
+msgid "Selected completion match"
+msgstr "Vybrané doplňování shody"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:22
+#| msgid "Start the selected game"
+msgid "Selected game"
+msgstr "Vybraná hra"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:23
+msgid "Selected view"
+msgstr "Vybrané zobrazení"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:24
+#| msgid "Show next game"
+msgid "Show cloned games"
+msgstr "Zobrazovat klonované hry"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:25
+msgid "Sort column and sort order"
+msgstr "Sloupec a pořadí řazení"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:26
+#| msgid "In-game sound is muted"
+msgid "Sound muted"
+msgstr "Zvuk ztišen"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:27
+#| msgid "Start games in _fullscreen mode"
+msgid "Start games in full screen mode"
+msgstr "Spouštět hry v režimu celé obrazovky"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:28
+msgid "Suggested filename for the ROM error \"Save As\" dialog."
+msgstr ""
+"Navrhovaný název souboru pro uložení chyb ROM v dialogovém okně „Uložit "
+"jako“."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:29
+msgid "The X coordinate of the main window."
+msgstr "Souřadnice X hlavního okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:30
+msgid "The Y coordinate of the main window."
+msgstr "Souřadnice Y hlavního okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:31
+msgid ""
+"The first value is the most recently sorted column name (or \"default\" for "
+"default sorting), and the second value is the sort order. True indicates "
+"descending order; False indicates ascending order."
+msgstr ""
+"První hodnota udává název sloupce, podle kterého bylo řazeno úplně naposledy "
+"(nebo „default“ pro výchozí řazení), a druhá hodnota udává pořadí řazení. "
+"Hodnota True představuje sestupné řazení, False vzestupné řazení."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:32
+msgid "The height of the Properties window."
+msgstr "Výška okna Vlastnosti."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:33
+msgid "The height of the main window."
+msgstr "Výška hlavního okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:34
+msgid "The most recent text in the search entry."
+msgstr "Text, který byl zadán do vyhledávacího pole úplně naposledy."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:35
+msgid "The most recently run version of GNOME Video Arcade."
+msgstr "Verze GNOME Video Arcade, která běžela úplně naposledy."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:36
+#| msgid "Start the selected game"
+msgid "The most recently selected game."
+msgstr "Hra, která byla vybrána úplně naposledy."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:37
+msgid ""
+"The most recently selected match from a search completion list. The first "
+"value is the column name of the match, and the second value is the text of "
+"the match. Example: (manufacturer, Williams). Empty values indicate the "
+"completion feature was not used in the most recent search."
+msgstr ""
+"Úplně naposledy vybraná shoda ze seznamu doplňování při hledání. První "
+"hodnota udává název sloupce se shodou a druhá hodnota porovnávaný text. "
+"Například: (manufacturer, Williams). Prázdné hodnoty znamenají, že funkce "
+"doplňování nebyla při úplně posledním hledání použita."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:38
+msgid "The most recently selected page in the Properties window."
+msgstr "Stránka v okně Vlastnosti, která byla vybrána úplně naposledy."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:39
+msgid "The most recently selected view."
+msgstr "Zobrazení, které bylo vybráno úplně naposledy."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:40
+msgid "The width of the Properties window."
+msgstr "Šířka okna Vlastnosti."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:41
+msgid "The width of the main window."
+msgstr "Šířka hlavního okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:42
+msgid "True if the Properties window is maximized."
+msgstr "Zapnuto, pokud je okno Vlastnosti maximalizováno."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:43
+msgid "True if the main window is maximized."
+msgstr "Zapnuto, pokud má být hlavní okno maximalizované."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:44
+msgid "Window X coordinate"
+msgstr "Souřadnice X okna"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:45
+msgid "Window Y coordinate"
+msgstr "Souřadnice Y okna"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:46
+msgid "Window height"
+msgstr "Výška okna"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:47
+msgid "Window maximized"
+msgstr "Okno maximalizováno"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:48
+msgid "Window width"
+msgstr "Šířka okna"
 
 #: ../src/gva-audit.c:238
 msgid "Save As"
@@ -276,133 +523,133 @@ msgstr "_Zobrazit"
 msgid "_Hide"
 msgstr "_Skrýt"
 
-#: ../src/gva-columns.c:298
+#: ../src/gva-columns.c:299
 #, c-format
 msgid "Remove %s Column"
 msgstr "Odebrat sloupec %s"
 
-#: ../src/gva-columns.c:300
+#: ../src/gva-columns.c:301
 #, c-format
 msgid "Remove the \"%s\" column from the game list"
 msgstr "Odebrat sloupec „%s“ ze seznamu her"
 
 #. The labels begin with a UTF-8 encoded bullet character.
-#: ../src/gva-columns.c:759
+#: ../src/gva-columns.c:762
 #, no-c-format
 msgid "• The colors aren't 100% accurate."
 msgstr "• Barvy nejsou 100% správně."
 
-#: ../src/gva-columns.c:768
+#: ../src/gva-columns.c:771
 msgid "• The colors are completely wrong."
 msgstr "• Barvy jsou úplně špatně."
 
-#: ../src/gva-columns.c:778
+#: ../src/gva-columns.c:781
 #, no-c-format
 msgid "• The video emulation isn't 100% accurate."
 msgstr "• Emulace obrazu není 100% správná."
 
-#: ../src/gva-columns.c:788
+#: ../src/gva-columns.c:791
 #, no-c-format
 msgid "• The sound emulation isn't 100% accurate."
 msgstr "• Emulace zvuku není 100% správná."
 
-#: ../src/gva-columns.c:797
+#: ../src/gva-columns.c:800
 msgid "• The game lacks sound."
 msgstr "• Hře schází zvuk."
 
-#: ../src/gva-columns.c:806
+#: ../src/gva-columns.c:809
 msgid "• Screen flipping in cocktail mode is not supported."
 msgstr "• Překlápění obrazu ve smíšeném režimu není podporované."
 
-#: ../src/gva-columns.c:815
+#: ../src/gva-columns.c:818
 msgid "• <b>THIS GAME DOESN'T WORK.</b>"
 msgstr "• <b>TATO HRA NEPRACUJE.</b>"
 
-#: ../src/gva-columns.c:825
+#: ../src/gva-columns.c:828
 msgid "• The game has protection which isn't fully emulated."
 msgstr "• Hra má ochranu, která není plně emulovaná."
 
-#: ../src/gva-columns.c:861
+#: ../src/gva-columns.c:864
 msgid "Click here to remove from favorites"
 msgstr "Kliknutím zde odeberete z oblíbených"
 
-#: ../src/gva-columns.c:863
+#: ../src/gva-columns.c:866
 msgid "Click here to add to favorites"
 msgstr "Kliknutím zde přidáte do oblíbených"
 
-#: ../src/gva-columns.c:955 ../src/gva-properties.c:410
+#: ../src/gva-columns.c:958 ../src/gva-properties.c:410
 msgid "(Game Description Unknown)"
 msgstr "(Neznámý popis hry)"
 
-#: ../src/gva-columns.c:958 ../src/gva-properties.c:413
+#: ../src/gva-columns.c:961 ../src/gva-properties.c:413
 msgid "(Manufacturer Unknown)"
 msgstr "(Neznámý výrobce)"
 
-#: ../src/gva-columns.c:961 ../src/gva-properties.c:416
+#: ../src/gva-columns.c:964 ../src/gva-properties.c:416
 msgid "(Year Unknown)"
 msgstr "(Neznámý rok)"
 
-#: ../src/gva-columns.c:985 ../src/gva-main.c:1021
+#: ../src/gva-columns.c:988 ../src/gva-main.c:1011
 msgid "ROM Name"
 msgstr "Název ROM"
 
-#: ../src/gva-columns.c:987
+#: ../src/gva-columns.c:990
 msgid "BIOS"
 msgstr "BIOS"
 
-#: ../src/gva-columns.c:989 ../src/gva-main.c:1014
+#: ../src/gva-columns.c:992 ../src/gva-main.c:1004
 msgid "Category"
 msgstr "Kategorie"
 
-#: ../src/gva-columns.c:991
+#: ../src/gva-columns.c:994
 msgid "Favorite"
 msgstr "Oblíbená"
 
-#: ../src/gva-columns.c:994
+#: ../src/gva-columns.c:997
 msgid "Driver"
 msgstr "Ovladač"
 
-#: ../src/gva-columns.c:1002
+#: ../src/gva-columns.c:1005
 msgid "Samples"
 msgstr "Ukázky"
 
-#: ../src/gva-columns.c:1004
+#: ../src/gva-columns.c:1007
 msgid "Title"
 msgstr "Název"
 
-#: ../src/gva-columns.c:1007
+#: ../src/gva-columns.c:1010
 msgid "Year"
 msgstr "Rok"
 
-#: ../src/gva-columns.c:1010 ../src/gva-main.c:1000
+#: ../src/gva-columns.c:1013 ../src/gva-main.c:990
 msgid "Manufacturer"
 msgstr "Výrobce"
 
-#: ../src/gva-columns.c:1016
+#: ../src/gva-columns.c:1019
 msgid "Players"
 msgstr "Hráči"
 
-#: ../src/gva-columns.c:1019
+#: ../src/gva-columns.c:1022
 msgid "Players (Alt.)"
 msgstr "Hráči (stříd.)"
 
-#: ../src/gva-columns.c:1022
+#: ../src/gva-columns.c:1025
 msgid "Players (Sim.)"
 msgstr "Hráči (souč.)"
 
-#: ../src/gva-columns.c:1027
+#: ../src/gva-columns.c:1030
 msgid "Status"
 msgstr "Stav"
 
-#: ../src/gva-columns.c:1038
+#: ../src/gva-columns.c:1041
 msgid "Last Played"
 msgstr "Naposledy hráno"
 
-#: ../src/gva-columns.c:1040
+#: ../src/gva-columns.c:1043
 msgid "Comment"
 msgstr "Poznámka"
 
-#: ../src/gva-columns.c:1044
+#: ../src/gva-columns.c:1047
 msgid "Played On"
 msgstr "Hráno"
 
@@ -415,32 +662,32 @@ msgstr "Tento program není nastavený, aby mohl zobrazit informace o historii."
 msgid "Invalid or unsupported INP file format"
 msgstr "Neplatný nebo nepodporovaný formát souboru INP"
 
-#: ../src/gva-main.c:235
+#: ../src/gva-main.c:242
 msgid "Building game database..."
 msgstr "Buduje se databáze her…"
 
-#: ../src/gva-main.c:296
+#: ../src/gva-main.c:303
 msgid "Analyzing ROM files..."
 msgstr "Analyzují se soubory ROM…"
 
-#: ../src/gva-main.c:986
+#: ../src/gva-main.c:976
 msgid "Search for any of the following:"
 msgstr "Hledat některou z následujících věcí:"
 
 #. The labels begin with a UTF-8 encoded bullet character.
-#: ../src/gva-main.c:993
+#: ../src/gva-main.c:983
 msgid "Game Title"
 msgstr "Název hry"
 
-#: ../src/gva-main.c:1007
+#: ../src/gva-main.c:997
 msgid "Copyright Year"
 msgstr "Rok vydání"
 
-#: ../src/gva-main.c:1028
+#: ../src/gva-main.c:1018
 msgid "BIOS Name"
 msgstr "Název BIOSu"
 
-#: ../src/gva-main.c:1035
+#: ../src/gva-main.c:1025
 msgid "Driver Name"
 msgstr "Název ovladače"
 
@@ -467,7 +714,7 @@ msgstr "Nelze přehrát hudbu"
 msgid "Buffering %d%%..."
 msgstr "Ukládá se do vyrovnávací paměti %d%%…"
 
-#: ../src/gva-music-button.c:265
+#: ../src/gva-music-button.c:262
 msgid "Connecting..."
 msgstr "Připojuje se…"
 
@@ -859,11 +1106,11 @@ msgstr ""
 "nastavené MAME nebo že nejsou nainstalované žádné soubory ROM. Klikněte na "
 "<b>Nápověda</b>, pokud chcete více podrobností a rady k problémům."
 
-#: ../src/main.c:199
+#: ../src/main.c:196
 msgid "Changes detected in ROM files"
 msgstr "Zjištěny změny v souborech ROM"
 
-#: ../src/main.c:203
+#: ../src/main.c:200
 msgid ""
 "GNOME Video Arcade has detected changes in your ROM files and will need to "
 "audit them in order to update the game list. However the audit may take "
@@ -876,13 +1123,19 @@ msgstr ""
 "potřebuje je prověřit, aby mohla aktualizovat seznam her. Prověření však "
 "může trvat několik minut. Přejete si provést prověření nyní?"
 
-#: ../src/main.c:213
+#: ../src/main.c:210
 msgid "_Skip Audit"
 msgstr "Pře_skočit prověření"
 
-#: ../src/main.c:214
+#: ../src/main.c:211
 msgid "_Audit ROM Files"
 msgstr "Pro_věřit soubory ROM"
+
+#~ msgid "GConf error: %s"
+#~ msgstr "Chyba GConf: %s"
+
+#~ msgid "All further errors shown only on terminal."
+#~ msgstr "Všechny další chyby se zobrazují pouze v terminálu."
 
 #~ msgid ""
 #~ "GNOME Video Arcade was unable to locate any ROM files. It could be that "
