--- a/po/es.po
+++ b/po/es.po
@@ -5,14 +5,15 @@
 #
 # Omar Campagne <ocampagne@gmail.com>, 2009.
 # Jorge González <jorgegonz@svn.gnome.org>, 2009, 2010, 2011.
+# Daniel Mustieles <daniel.mustieles@gmail.com>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-video-arcade.po.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=\n"
-"POT-Creation-Date: 2011-02-26 18:24+0000\n"
-"PO-Revision-Date: 2011-02-27 13:25+0100\n"
-"Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
+"POT-Creation-Date: 2011-02-27 12:32+0000\n"
+"PO-Revision-Date: 2011-03-03 09:35+0100\n"
+"Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,8 +31,7 @@ msgstr "&#x2022; <b>ESTE JUEGO NO FUNCIONA.</b>"
 
 #: ../data/gnome-video-arcade.builder.h:3
 msgid "&#x2022; Screen flipping in cocktail mode is not supported."
-msgstr ""
-"&#x2022; El cambio de pantalla no es compatible con el modo «cocktail»."
+msgstr "&#x2022; El cambio de pantalla no es compatible con el modo «cocktail»."
 
 #: ../data/gnome-video-arcade.builder.h:4
 msgid "&#x2022; The colors are completely wrong."
@@ -240,17 +240,14 @@ msgid "_Start Game"
 msgstr "_Iniciar juego"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:1
-#| msgid "Show all available games"
 msgid "All available column names"
 msgstr "Todos los nombres de columna disponibles"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:2
-#| msgid "Play a music clip"
 msgid "Auto-play music clip"
 msgstr "Reproducir automáticamente un clip de música"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:3
-#| msgid "Columns"
 msgid "Column names"
 msgstr "Nombres de columnas"
 
@@ -274,7 +271,6 @@ msgid ""
 msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:6
-#| msgid "_Favorite Games"
 msgid "Favorite games"
 msgstr "Juegos favoritos"
 
@@ -283,10 +279,12 @@ msgid ""
 "If true, automatically switch to full screen mode when starting a game. If "
 "false, start the game in a window."
 msgstr ""
+"Si es cierto, cambiar automáticamente en modo a pantalla completa al iniciar "
+"una partida. Si es falso, se inicia la partida en una ventana."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:8
 msgid "If true, games are started without sound."
-msgstr ""
+msgstr "Si es cierto, los juegos se iniciar sin sonido."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:9
 msgid ""
@@ -302,38 +300,33 @@ msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:11
 msgid "List of column names to display."
-msgstr ""
+msgstr "Lista de los nombres de columnas que mostrar."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:12
 msgid "List of the user's favorite games."
-msgstr ""
+msgstr "Lista de los juegos favoritos del usuario."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:13
 msgid "Program version"
 msgstr "Versión del programa"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:14
-#| msgid "Properties"
 msgid "Properties height"
 msgstr "Altura de las propiedades"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:15
-#| msgid "Properties"
 msgid "Properties maximized"
 msgstr "Propiedades maximizadas"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:16
-#| msgid "Properties"
 msgid "Properties page"
 msgstr "Página de propiedades"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:17
-#| msgid "Properties"
 msgid "Properties width"
 msgstr "Anchura de las propiedades"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:18
-#| msgid "Save ROM errors to a file"
 msgid "ROM error filename"
 msgstr "Error en el nombre del archivo ROM"
 
@@ -342,8 +335,6 @@ msgid "Save and restore state"
 msgstr "Guardar y restaurar estado"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:20
-#| msgid "Search Result"
-#| msgid_plural "Search Results"
 msgid "Search text"
 msgstr "Busca texto"
 
@@ -352,16 +343,14 @@ msgid "Selected completion match"
 msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:22
-#| msgid "Start the selected game"
 msgid "Selected game"
 msgstr "Juego seleccionado"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:23
 msgid "Selected view"
-msgstr ""
+msgstr "Vista seleccionada"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:24
-#| msgid "Show next game"
 msgid "Show cloned games"
 msgstr "Mostrar juegos clonados"
 
@@ -370,12 +359,10 @@ msgid "Sort column and sort order"
 msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:26
-#| msgid "In-game sound is muted"
 msgid "Sound muted"
 msgstr "Sonido silenciado"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:27
-#| msgid "Start games in _fullscreen mode"
 msgid "Start games in full screen mode"
 msgstr "Iniciar juegos en modo a pantalla completa"
 
@@ -385,11 +372,11 @@ msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:29
 msgid "The X coordinate of the main window."
-msgstr ""
+msgstr "La coordenada X de la ventana principal."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:30
 msgid "The Y coordinate of the main window."
-msgstr ""
+msgstr "La coordenada Y de la ventana principal."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:31
 msgid ""
@@ -400,22 +387,21 @@ msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:32
 msgid "The height of the Properties window."
-msgstr ""
+msgstr "La altura de la ventana «Propiedades»"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:33
 msgid "The height of the main window."
-msgstr ""
+msgstr "La altura de la ventana principal."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:34
 msgid "The most recent text in the search entry."
-msgstr ""
+msgstr "El texto buscado más recientemente en la entrada de búsqueda."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:35
 msgid "The most recently run version of GNOME Video Arcade."
 msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:36
-#| msgid "Start the selected game"
 msgid "The most recently selected game."
 msgstr "El juego más recientemente seleccionado."
 
@@ -429,43 +415,43 @@ msgstr ""
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:38
 msgid "The most recently selected page in the Properties window."
-msgstr ""
+msgstr "La página seleccionada más recientemente en la ventana «Propiedades»."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:39
 msgid "The most recently selected view."
-msgstr ""
+msgstr "La vista seleccionada más recientemente."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:40
 msgid "The width of the Properties window."
-msgstr ""
+msgstr "La anchura de la ventana «Propiedades»."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:41
 msgid "The width of the main window."
-msgstr ""
+msgstr "La anchura de la ventana principal."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:42
 msgid "True if the Properties window is maximized."
-msgstr ""
+msgstr "Cierto si se maximiza la ventana «Propiedades»."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:43
 msgid "True if the main window is maximized."
-msgstr ""
+msgstr "Cierto si la ventana principal está maximizada."
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:44
 msgid "Window X coordinate"
-msgstr ""
+msgstr "Coordenada X de la ventana"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:45
 msgid "Window Y coordinate"
-msgstr ""
+msgstr "Coordenada Y de la ventana"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:46
 msgid "Window height"
-msgstr ""
+msgstr "Altura de la ventana"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:47
 msgid "Window maximized"
-msgstr ""
+msgstr "Ventana maximizada"
 
 #: ../data/org.gnome.VideoArcade.gschema.xml.in.h:48
 msgid "Window width"
@@ -570,7 +556,7 @@ msgstr "(Fabricante desconocido)"
 msgid "(Year Unknown)"
 msgstr "(Año desconocido)"
 
-#: ../src/gva-columns.c:988 ../src/gva-main.c:1011
+#: ../src/gva-columns.c:988 ../src/gva-main.c:1021
 msgid "ROM Name"
 msgstr "Nombre de la ROM"
 
@@ -578,7 +564,7 @@ msgstr "Nombre de la ROM"
 msgid "BIOS"
 msgstr "BIOS"
 
-#: ../src/gva-columns.c:992 ../src/gva-main.c:1004
+#: ../src/gva-columns.c:992 ../src/gva-main.c:1014
 msgid "Category"
 msgstr "Categoría"
 
@@ -602,7 +588,7 @@ msgstr "Título"
 msgid "Year"
 msgstr "Año"
 
-#: ../src/gva-columns.c:1013 ../src/gva-main.c:990
+#: ../src/gva-columns.c:1013 ../src/gva-main.c:1000
 msgid "Manufacturer"
 msgstr "Fabricante"
 
@@ -652,24 +638,24 @@ msgstr "Construyendo la base de datos de juegos…"
 msgid "Analyzing ROM files..."
 msgstr "Analizando archivos ROM…"
 
-#: ../src/gva-main.c:976
+#: ../src/gva-main.c:986
 msgid "Search for any of the following:"
 msgstr "Buscar cualquiera de los siguientes:"
 
 #. The labels begin with a UTF-8 encoded bullet character.
-#: ../src/gva-main.c:983
+#: ../src/gva-main.c:993
 msgid "Game Title"
 msgstr "Título del juego"
 
-#: ../src/gva-main.c:997
+#: ../src/gva-main.c:1007
 msgid "Copyright Year"
 msgstr "Año de copyright"
 
-#: ../src/gva-main.c:1018
+#: ../src/gva-main.c:1028
 msgid "BIOS Name"
 msgstr "Nombre de la BIOS"
 
-#: ../src/gva-main.c:1025
+#: ../src/gva-main.c:1035
 msgid "Driver Name"
 msgstr "Nombre del controlador"
 
